fix(button): add align-self flex-start to prevent stretching in flex column

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -60,6 +60,7 @@ h1 {
   display: inline-flex;
   width:auto;
   cursor: pointer;
+  align-self: flex-start;
 
   &__text {
     font-size: 20px;
